ci: Debug - Output Inputs

--- a/.github/workflows/about.yml
+++ b/.github/workflows/about.yml
@@ -41,6 +41,14 @@ env:
 permissions: {}
 
 jobs:
+  echo-inputs:
+    name: "Echo Inputs"
+    runs-on: ubuntu-latest
+    steps:
+      - id: echo
+        name: "Echo Inputs"
+        run: |
+          echo "verbose=${{ github.event.inputs.verbose }}"
   main:
     name: "Main"
     runs-on: ubuntu-latest
