--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,14 @@ env:
 permissions: {}
 
 jobs:
+  echo-inputs:
+    name: "Echo Inputs"
+    runs-on: ubuntu-latest
+    steps:
+      - id: echo
+        name: "Echo Inputs"
+        run: |
+          echo "verbose=${{ github.event.inputs.verbose }}"
   about:
     name: "About"
     uses: "./.github/workflows/about.yml"
