--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -58,6 +58,16 @@ permissions:
   contents: write
 
 jobs:
+  echo-inputs:
+    name: "Echo Inputs"
+    runs-on: ubuntu-latest
+    steps:
+      - id: echo
+        name: "Echo Inputs"
+        run: |
+          echo "dryRun=${{ github.event.inputs.dryRun }}"
+          echo "release_type=${{ github.event.inputs.release_type }}"
+          echo "verbose=${{ github.event.inputs.verbose }}"
   about:
     name: "About"
     uses: "./.github/workflows/about.yml"
