--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,9 +65,9 @@ jobs:
       - id: echo
         name: "Echo Inputs"
         run: |
-          echo "dryRun=${{ github.event.inputs.dryRun }}"
-          echo "release_type=${{ github.event.inputs.release_type }}"
-          echo "verbose=${{ github.event.inputs.verbose }}"
+          echo "dryRun=${{ inputs.dryRun }}"
+          echo "release_type=${{ inputs.release_type }}"
+          echo "verbose=${{ inputs.verbose }}"
   release:
     name: "Release Version"
     uses: "./.github/workflows/release-version.yml"
