ci: Snapshot Requires Release
We must ensure, that we get the next snapshot version _after_ the
release is done.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,6 +85,7 @@ jobs:
     uses: "./.github/workflows/inc-snapshot-version.yml"
     needs:
       - build
+      - release
     secrets: inherit
     with:
       dryRun: ${{ inputs.dryRun }}
