--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - main
-    if: ${{ github.event.inputs.verbose }}
+    if: ${{ inputs.verbose }}
     steps:
       - id: output
         name: "Output"
