--- a/.github/workflows/inc-snapshot-version.yml
+++ b/.github/workflows/inc-snapshot-version.yml
@@ -70,6 +70,10 @@ jobs:
       - id: checkout
         name: "Checkout"
         uses: actions/checkout@v4
+      - id: git-pull
+        name: "Pull Changes"
+        run: |
+          git pull
       - id: installPnpm
         name: "Install: Use PNPM ${{ env.pnpmVersion }}"
         uses: pnpm/action-setup@v4
