--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gest-hh-neve-child-theme",
-  "version": "1.0.10",
+  "version": "1.0.11-0",
   "description": "",
   "main": "index.js",
   "engines": {
