--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,6 +109,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          fail_on_unmatched_files: true
           files: |
             ${{ steps.download-artifact.outputs.download-path }}
           tag_name: ${{ needs.release.outputs.version }}
@@ -117,6 +118,13 @@ jobs:
         name: "Create Release (Dry Run)"
         run: |
           echo "Would create a release with ${{ needs.build.outputs.artifact-name }}.zip"
+      - id: debug-on-failure
+        name: "Debug on Failure"
+        if: failure()
+        run: |
+          echo "Debugging on failure..."
+          ls -axl
+          find -type f
   verbose:
     name: "Verbose"
     runs-on: ubuntu-latest
