--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,6 +102,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ needs.build.outputs.artifact-name }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - id: gh-release
         if: ${{ ! inputs.dryRun }}
         name: "Create Release"
