--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,8 @@ env:
   NODE_OPTIONS: "--max_old_space_size=4096"
 
 permissions:
+  # Requires write permissions, as inc-snapshot-version and release-version
+  # require it.
   contents: write
 
 jobs:
@@ -107,6 +109,7 @@ jobs:
         name: "Debug Download"
         run: |
           ls -R
+# TODO: Somehow this does not work. The artifact just does not appear.
       - id: gh-release
         if: ${{ ! inputs.dryRun }}
         name: "Create Release"
