--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preadd": "node ./scripts/check-pnpm.mjs",
     "build": "node ./scripts/build.mjs ./src ./build",
     "preinstall": "node ./scripts/check-pnpm.mjs",
+    "lint": "eslint --max-warnings 0",
     "preremove": "node ./scripts/check-pnpm.mjs",
     "preversion": "exit 0",
     "version": "pnpm --silent build --silent",
@@ -24,7 +25,13 @@
   "author": "Mark Michaelis",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@npmcli/package-json": "^5.2.0",
+    "eslint": "^9.4.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-yml": "^1.14.0",
+    "globals": "^15.4.0",
     "gulp": "^5.0.0",
     "gulp-zip": "^6.0.0",
     "minimist": "^1.2.8"
