--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       release_type:
-        description: 'Release type.'
+        description: "Release type."
         required: true
-        default: 'patch'
+        default: "patch"
         type: choice
         options:
           - major
@@ -25,9 +25,9 @@ on:
   workflow_call:
     inputs:
       release_type:
-        description: 'Release type.'
+        description: "Release type."
         required: true
-        default: 'patch'
+        default: "patch"
         type: string
       verbose:
         description: "If to output a summary."
