--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: "Release"
+name: "Release (Main)"
 
 on:
   workflow_dispatch:
@@ -70,9 +70,14 @@ jobs:
           echo "dryRun=${{ inputs.dryRun }}"
           echo "release_type=${{ inputs.release_type }}"
           echo "verbose=${{ inputs.verbose }}"
+  lint:
+    name: "Run Linter"
+    uses: "./.github/workflows/lint.yml"
   release:
     name: "Release Version"
     uses: "./.github/workflows/release-version.yml"
+    needs:
+      - lint
     secrets: inherit
     with:
       dryRun: ${{ inputs.dryRun }}
