--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint --max-warnings 0",
     "preremove": "node ./scripts/check-pnpm.mjs",
     "preversion": "exit 0",
-    "version": "pnpm run build",
+    "version": "pnpm run lint && pnpm run build",
     "postversion": "exit 0",
     "wordpress-theme-meta": "node ./scripts/wordpress-theme-meta.mjs",
     "zip": "gulp zip"
