--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,12 +40,15 @@ on:
         type: boolean
         default: false
     outputs:
-      version:
+      releaseVersion:
         description: "Released version"
-        value: ${{ jobs.release.outputs.version }}
-      nextVersion:
-        description: "Snapshot version"
-        value: ${{ jobs.snapshot.outputs.version }}
+        value: ${{ jobs.main.outputs.releaseVersion }}
+      snapshotVersion:
+        description: "Next Snapshot Version"
+        value: ${{ jobs.main.outputs.snapshotVersion }}
+      artifactName:
+        description: "Artifact Name"
+        value: ${{ jobs.main.outputs.artifactName }}
 
 run-name: |
   ${{ github.workflow }} (release type: ${{ inputs.release_type }}, dry-run: ${{ inputs.dryRun }}, verbose: ${{ inputs.verbose }})
@@ -53,6 +56,9 @@ run-name: |
 env:
   # https://github.com/actions/runner-images/issues/70
   NODE_OPTIONS: "--max_old_space_size=4096"
+  RELEASE_TYPE: ${{ inputs.release_type }}
+  USER_NAME: ${{ github.actor }}
+  USER_MAIL: "${{ github.actor }}@users.noreply.github.com"
 
 permissions:
   # Requires write permissions, as inc-snapshot-version and release-version
@@ -70,57 +76,76 @@ jobs:
           echo "dryRun=${{ inputs.dryRun }}"
           echo "release_type=${{ inputs.release_type }}"
           echo "verbose=${{ inputs.verbose }}"
-  lint:
-    name: "Run Linter"
-    uses: "./.github/workflows/lint.yml"
-  release:
-    name: "Release Version"
-    uses: "./.github/workflows/release-version.yml"
-    needs:
-      - lint
-    secrets: inherit
-    with:
-      dryRun: ${{ inputs.dryRun }}
-      release_type: ${{ inputs.release_type }}
-  build:
-    name: "Build Release"
-    uses: "./.github/workflows/build.yml"
-    needs:
-      - release
-  snapshot:
-    name: "Increase Snapshot Version"
-    uses: "./.github/workflows/inc-snapshot-version.yml"
-    needs:
-      - build
-      - release
-    secrets: inherit
-    with:
-      dryRun: ${{ inputs.dryRun }}
+  about:
+    name: "About"
+    uses: "./.github/workflows/about.yml"
   main:
     name: "Main"
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs:
-      - build
-      - release
+      - about
+    env:
+      nodeVersion: ${{ needs.about.outputs.nodeVersion }}
+      pnpmVersion: ${{ needs.about.outputs.pnpmVersion }}
+    outputs:
+      releaseVersion: ${{ steps.parse-release-version.outputs.result }}
+      snapshotVersion: ${{ steps.parse-snapshot-version.outputs.result }}
+      artifactName: ${{ steps.parse-artifact-name.outputs.result }}
     steps:
-      - id: download-artifact
-        name: Download artifact
-        uses: actions/download-artifact@v4
+      - id: checkout
+        name: "Checkout"
+        uses: actions/checkout@v4
+      - id: installPnpm
+        name: "Install: Use PNPM ${{ env.pnpmVersion }}"
+        uses: pnpm/action-setup@v4
         with:
-          name: ${{ needs.build.outputs.artifact-name }}
-          path:
-            ${{ github.workspace }}/artifact/${{
-            needs.build.outputs.artifact-name }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-      - id: zip-release-artifact
-        name: "Zip Release Artifact: ${{ needs.build.outputs.artifact-name }}"
+          version: ${{ env.pnpmVersion }}
+          run_install: false
+      - id: installNodeJs
+        name: "Install: Use Node.js ${{ env.nodeVersion }}"
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.nodeVersion }}
+          cache: "pnpm"
+      - id: install
+        name: "Install"
         run: |
-          artifactBasePath="${{ github.workspace }}/artifact/${{ needs.build.outputs.artifact-name }}"
-          artifactPath="${{ github.workspace }}/artifact/${{ needs.build.outputs.artifact-name }}.zip"
-          cd "${artifactBasePath}"
-          zip --recurse-paths -9 "${artifactPath}" .
-          echo "result=${artifactPath}" >> $GITHUB_OUTPUT
+          pnpm install --frozen-lockfile
+      - id: config
+        name: "Git Config"
+        run: |
+          git config --global user.name "${{ env.USER_NAME }}"
+          git config --global user.email "${{ env.USER_MAIL }}"
+          echo "Done configuring Git: user.name and user.email."
+      - id: release
+        name: "Release"
+        if: ${{ ! inputs.dryRun }}
+        run: |
+          result="$(./sh/release.sh --type "${{ env.RELEASE_TYPE }}" --push)"
+          echo "RELEASE_INFORMATION=${result}" >> $GITHUB_ENV
+      - id: release-dry-run
+        name: "Release (Dry Run)"
+        if: ${{ inputs.dryRun }}
+        run: |
+          result="$(./sh/release.sh --type "${{ env.RELEASE_TYPE }}")"
+          echo "RELEASE_INFORMATION=${result}" >> $GITHUB_ENV
+      - id: parse-release-version
+        name: "Parse Release Version"
+        run: |
+          result="$(jq --raw-output '.releaseVersion' <<< "${{ env.RELEASE_INFORMATION }}")"
+          echo "result=${result}" >> $GITHUB_OUTPUT
+      - id: parse-snapshot-version
+        name: "Parse Snapshot Version"
+        run: |
+          result="$(jq --raw-output '.snapshotVersion' <<< "${{ env.RELEASE_INFORMATION }}")"
+          echo "result=${result}" >> $GITHUB_OUTPUT
+      - id: parse-artifact-name
+        name: "Parse Artifact Name"
+        if: ${{ ! inputs.dryRun }}
+        run: |
+          result="$(jq --raw-output '.artifactName' <<< "${{ env.RELEASE_INFORMATION }}")"
+          echo "result=${result}" >> $GITHUB_OUTPUT
       - id: gh-release
         if: ${{ ! inputs.dryRun }}
         name: "Create Release"
@@ -130,21 +155,19 @@ jobs:
         with:
           fail_on_unmatched_files: true
           files: |
-            ${{ steps.zip-release-artifact.outputs.result }}
-          tag_name: ${{ needs.release.outputs.version }}
+            ${{ steps.parse-artifact-name.outputs.result }}
+          tag_name: ${{ steps.parse-release-version.outputs.result }}
       - id: gh-release-dry-run
         if: ${{ inputs.dryRun }}
         name: "Create Release (Dry Run)"
         run: |
-          echo "Would create a release with ${{ needs.build.outputs.artifact-name }}.zip"
-          ls -axl ${{ steps.zip-release-artifact.outputs.result }}
+          echo "Would create a release ${{ steps.parse-release-version.outputs.result }} with ${{ steps.parse-artifact-name.outputs.result }}."
+          ls -axl ${{ steps.parse-artifact-name.outputs.result }}
   verbose:
     name: "Verbose"
     runs-on: ubuntu-latest
     needs:
       - main
-      - release
-      - snapshot
     if: ${{ inputs.verbose }}
     steps:
       - id: output
@@ -159,5 +182,6 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "## Result" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "* Released Version: ${{ needs.release.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-          echo "* Snapshot Version: ${{ needs.snapshot.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "* Released Version: ${{ needs.main.outputs.releaseVersion }}" >> $GITHUB_STEP_SUMMARY
+          echo "* Snapshot Version: ${{ needs.main.outputs.snapshotVersion }}" >> $GITHUB_STEP_SUMMARY
+          echo "* Artifact: ${{ needs.main.outputs.artifactName }}" >> $GITHUB_STEP_SUMMARY
