ci(github): Also Fetch Tags
To get the previous release tag, we need to checkout including the
tags.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,6 +101,8 @@ jobs:
       - id: checkout
         name: "Checkout"
         uses: actions/checkout@v4
+        with:
+          fetch-tags: true
       - id: installPnpm
         name: "Install: Use PNPM ${{ env.pnpmVersion }}"
         uses: pnpm/action-setup@v4
