ci(github): Also Fetch Tags
To get the previous release tag, we need to checkout including the
tags.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,7 +102,7 @@ jobs:
         name: "Checkout"
         uses: actions/checkout@v4
         with:
-          fetch-tags: true
+          fetch-depth: 0
       - id: installPnpm
         name: "Install: Use PNPM ${{ env.pnpmVersion }}"
         uses: pnpm/action-setup@v4
