chore: release patch: v1.0.20

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gest-hh-neve-child-theme",
-  "version": "1.0.20-rc.0",
+  "version": "1.0.20",
   "description": "",
   "main": "index.js",
   "engines": {
