build(release): Tune Release Script
* Removed dry-run support (just don't push)
* Use logging/output methods.
* Provide the option to output JSON to file.
* JSON output can now also be requested by CLI argument.
* New JSON Structure with much more information provided.
* Prevent "duplicate snapshot release" if we are already at a Snapshot
  version (we can just build and zip)

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "eslint": "eslint --max-warnings 0",
     "stylelint": "stylelint --max-warnings 0 \"src/**/*.css\"",
     "preremove": "node ./scripts/check-pnpm.mjs",
-    "preversion": "exit 0",
-    "version": "pnpm run lint && pnpm run build",
+    "preversion": "pnpm run lint",
+    "version": "pnpm run build",
     "postversion": "exit 0",
     "wordpress-theme-meta": "node ./scripts/wordpress-theme-meta.mjs"
   },
